learning style pages

--- a/FlaskWebProject/templates/myposts.html
+++ b/FlaskWebProject/templates/myposts.html
@@ -136,7 +136,7 @@
 	</div>
 
 		<div id="sidebar">
-			<a href="/createpost" class="btn btn-default btn-xl">
+			<a href="/choosestyle" class="btn btn-default btn-xl">
 				Create
 			</a>
 			<a href="/logout" class="btn btn-default btn-xl">
@@ -151,17 +151,17 @@
   </div>
 
   <!-- jQuery -->
-  <script src="js/jquery.js"></script>
+  <script src="static/js/jquery.js"></script>
 
   <!-- Bootstrap Core JavaScript -->
-  <script src="js/bootstrap.min.js"></script>
+  <script src="static/js/bootstrap.min.js"></script>
 
   <!-- Custom Theme JavaScript -->
-  <script src="js/clean-blog.min.js"></script>
+  <script src="static/js/clean-blog.min.js"></script>
 
   <!--Masonry-->
-  <script src="/js/masonry.pkgd.min.js"></script>
-  <script src="/js/masonry-docs.min"></script>
+  <script src="static/js/masonry.pkgd.min.js"></script>
+  <script src="static/js/masonry-docs.min"></script>
   <script>
 	// Javascript
   var container = document.querySelector('#masonry-grid');
