--- a/FlaskWebProject/templates/feed.html
+++ b/FlaskWebProject/templates/feed.html
@@ -145,7 +145,7 @@
 			</a>
 		{% endif %}
 		{% if loggedIn == True %}
-			<a href="/createpost" class="btn btn-default btn-xl">
+			<a href="/choosestyle" class="btn btn-default btn-xl">
 				Create
 			</a>
 			<a href="/logout" class="btn btn-default btn-xl">
