added getVideos function

--- a/FlaskWebProject/templates/login.html
+++ b/FlaskWebProject/templates/login.html
@@ -52,7 +52,7 @@
 	  </li>
 	  {% if session["loggedIn"] %}
 	  <li>
-	    <a href="/myposts" target="_top">My Posts</a>
+	    <a href="/myposts" target="_top">My Cards</a>
 	  </li>
 	  <li>
 		<a href="/createpost" target="_top">Create</a>
