--- a/FlaskWebProject/templates/myposts.html
+++ b/FlaskWebProject/templates/myposts.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>My Cards</title>
+  <title>My Posts</title>
 
   <!-- Bootstrap Core CSS -->
   <link href="static/bootstrap.min.css" rel="stylesheet">
