--- a/FlaskWebProject/templates/createpost.html
+++ b/FlaskWebProject/templates/createpost.html
@@ -93,10 +93,9 @@
     <!-- Main Content -->
     <div class="container">
       <div class="row">
-	<div class="col-lg-8 col-lg-offset-2 text-center">
-	  <h2>What do you want to study?</h2>
-    <hr class="small">
-    Learning Style:
+  <!-- <div class="col-lg-8 col-lg-offset-2 text-center"> -->
+	<div class="col-lg-8 col-lg-offset-2">
+	  <h2>How do you want to study?</h2>
     <br>
     <div class="dropdown">
       <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Learning Style
@@ -105,6 +104,9 @@
         <li><a href="#">Visual</a></li>
         <li><a href="#">Physical</a></li>
         <li><a href="#">Verbal</a></li>
+        <li><a href="#">Aural</a></li>
+        <li><a href="#">Social</a></li>
+        <li><a href="#">Logical</a></li>
       </ul>
     </div>
 	  <hr class="small">
@@ -117,7 +119,7 @@
 	  <textarea name="post" form="postform" style="width:90%; height:300px;">
 	  </textarea>
 	  <form method="POST" action="myposts" id="postform" style="padding:5px;">
-	    <input type="submit" name="submit" value="Post">
+	    <input type="submit" name="submit" value="Create"> <!-- value = "Post" -->
 	  </form>
 	</div>
       </div>
@@ -127,13 +129,13 @@
     </div>
 
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+    <script src="/static/js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
 
     <!-- Custom Theme JavaScript -->
-    <script src="js/clean-blog.min.js"></script>
+    <script src="/static/js/clean-blog.min.js"></script>
 
   </body>
 
