--- a/FlaskWebProject/templates/feed.html
+++ b/FlaskWebProject/templates/feed.html
@@ -74,6 +74,7 @@
 
   <!-- Page Header -->
   <!-- <header class="intro-header" style="background-image: url('static/img/home.jpg')"> -->
+  <header class="intro-header" style="background-color: black">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
