--- a/FlaskWebProject/templates/feed.html
+++ b/FlaskWebProject/templates/feed.html
@@ -73,7 +73,7 @@
   </nav>
 
   <!-- Page Header -->
-  <!-- <header class="intro-header" style="background-image: url('static/img/home.jpg')"> -->
+  <header class="intro-header" style="background-image: url('static/img/brain.jpg'); opacity: 0.85">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
@@ -83,8 +83,6 @@
 		  {% else %}
 			<h1>Welcome to Seventh Sense!</h1>
 		  {% endif %}
-            <hr class="small">
-            <span class="subheading">This is a place to learn.</span>
           </div>
         </div>
       </div>
