--- a/FlaskWebProject/templates/myposts.html
+++ b/FlaskWebProject/templates/myposts.html
@@ -75,14 +75,12 @@
   <!-- Page Header -->
   <!-- Set your background image for this header on the line below. -->
    <!-- url('static/img/myposts-bg.jpg' -->
-  <header class="intro-header" style="background-color: black">
+  <header class="intro-header" style="background-image: url('static/img/brain.jpg'); opacity: 0.85">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
           <div class="page-heading">
-            <h2>Welcome to Seventh Sense {{username}}!</h2>
-            <hr class="small">
-            <span class="subheading">This is a place to create.</span>
+            <h1>Welcome to Seventh Sense {{username}}!</h1>
           </div>
         </div>
       </div>
