--- a/FlaskWebProject/templates/physical.html
+++ b/FlaskWebProject/templates/physical.html
@@ -75,14 +75,12 @@
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
     <!-- url('static/img/create-bg.jpg') -->
-    <header class="intro-header" style="background-color: black">
+    <header class="intro-header" style="background-image: url('static/img/brain.jpg'); opacity: 0.85">
       <div class="container">
 	<div class="row">
           <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
             <div class="page-heading">
-              <h2>Let's Create {{username}}!</h2>
-              <hr class="small">
-              <span class="subheading">This is a place to create.</span>
+              <h1>Let's Create {{username}}!</h1>
             </div>
           </div>
 	</div>
@@ -95,18 +93,6 @@
       <div class="row">
 	<div class="col-lg-8 col-lg-offset-2 text-center">
 	  <h2>What do you want to study?</h2>
-    <hr class="small">
-    Learning Style:
-    <br>
-    <div class="dropdown">
-      <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Learning Style
-      <span class="caret"></span></button>
-      <ul class="dropdown-menu">
-        <li><a href="#">Visual</a></li>
-        <li><a href="#">Physical</a></li>
-        <li><a href="#">Verbal</a></li>
-      </ul>
-    </div>
 	  <hr class="small">
 	  Card Title:
 	  <br>
