edited html, added upload button to aural page

--- a/FlaskWebProject/templates/aural.html
+++ b/FlaskWebProject/templates/aural.html
@@ -85,7 +85,7 @@
               <span class="subheading">This is a place to create.</span>
             </div>
           </div>
-	</div>
+	      </div>
       </div>
     </header>
 
@@ -94,19 +94,13 @@
     <div class="container">
       <div class="row">
 	<div class="col-lg-8 col-lg-offset-2 text-center">
-	  <h2>What do you want to study?</h2>
+	  <h2>Aural Learning Style</h2>
     <hr class="small">
-    Learning Style:
+    Upload an audio file:
     <br>
-    <div class="dropdown">
-      <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Learning Style
-      <span class="caret"></span></button>
-      <ul class="dropdown-menu">
-        <li><a href="#">Visual</a></li>
-        <li><a href="#">Physical</a></li>
-        <li><a href="#">Verbal</a></li>
-      </ul>
-    </div>
+    <label class="btn btn-default btn-file">
+        Browse...<input type="file" style="display: none;">
+    </label>
 	  <hr class="small">
 	  Card Title:
 	  <br>
@@ -135,6 +129,14 @@
     <!-- Custom Theme JavaScript -->
     <script src="js/clean-blog.min.js"></script>
 
+    <script>
+      $(document).ready( function() {
+        $(':file').on('fileselect', function(event, numFiles, label) {
+          console.log(numFiles);
+          console.log(label);
+        });
+      });
+    </script>
   </body>
 
 </html>
