--- a/FlaskWebProject/templates/physical.html
+++ b/FlaskWebProject/templates/physical.html
@@ -94,20 +94,7 @@
     <div class="container">
       <div class="row">
 	<div class="col-lg-8 col-lg-offset-2 text-center">
-	  <h2>What do you want to study?</h2>
-    <hr class="small">
-    Learning Style:
-    <br>
-    <div class="dropdown">
-      <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Learning Style
-      <span class="caret"></span></button>
-      <ul class="dropdown-menu">
-        <li><a href="#">Visual</a></li>
-        <li><a href="#">Physical</a></li>
-        <li><a href="#">Verbal</a></li>
-      </ul>
-    </div>
-	  <hr class="small">
+	  <h2>Physical Learning Stlye</h2>
 	  Card Title:
 	  <br>
 	  <input type="text" name="title" form="postform">
